--- a/CV/estilosCV.css
+++ b/CV/estilosCV.css
@@ -53,6 +53,12 @@ body {background:#6e6666;}
     right:100px;
     left:100px;
 }
+
+.linkfacebook
+{
+    color: #000000;
+    font-weight: bold;
+}
 .imagen
 {
     position:absolute;
@@ -115,7 +121,6 @@ body {background:#6e6666;}
 
 
 }
-
 .proyectos
 {
     color: #000000;
@@ -139,25 +144,254 @@ h1
 
 .partesuperior
 {
-    width:1000px;
-    height:200px;
+    width:950px;
+    height:250px;
     background: #d5b091;
     position:relative;
-    top:100;
+    top:-100;
     bottom:400;
     right:400;
-    left:10px;
+    left:60px;
 }
 
 .parrafo1
 {
+    width:600px;
+    height:200px;
     position:absolute;
-    top:-20px;
-    bottom:400;
+    top:10px;
+    bottom:300;
     right:400;
-    left:530px;
+    left:390px;
     text-align:center;
 }
+
+
+
+.parteinferior
+{
+    width:950px;
+    height:1850px;
+    background: #d5b091;
+    position:relative;
+    top:-1000px;
+    bottom:100;
+    right:100;
+    left:60px;
+}
+
+.Cuadro-Whatsaap
+{
+    width:850px;
+    height:400px;
+    background: #69b4c3;
+    position:relative;
+    top:25px;
+    bottom:100;
+    right:100;
+    left:50px;
+}
+
+.proyecto1
+{
+    color: #000000;
+    position:absolute;
+    top:-30px;
+    bottom:100px;
+    right:100px;
+    left:10px;
+}
+
+.descripcion-whatsaap
+{
+    width:400px;
+    height:330px;
+    color: #000000;
+    position:absolute;
+   
+    font-size: 22px;
+    top:40px;
+    bottom:100px;
+    right:100px;
+    left:400px;
+    text-align: left;
+   
+
+}
+
+.imagenwhatsaap img
+{
+    width:380px;
+    height:330px;
+    position:absolute;
+    
+
+    top:50px;
+    bottom:100px;
+    right:100px;
+    left:10px;
+
+}
+
+.cuadroSolutions
+{
+    width:850px;
+    height:400px;
+    background: #69b4c3;
+    position:relative;
+    top:75px;
+    bottom:100;
+    right:100;
+    left:50px;
+}
+
+.proyecto2
+{
+    color: #000000;
+    position:absolute;
+    top:-30px;
+    bottom:100px;
+    right:100px;
+    left:10px;
+}
+
+.descripcion-orden
+{
+    width:400px;
+    height:330px;
+    color: #000000;
+    position:absolute;
+   
+    font-size: 22px;
+    top:30px;
+    bottom:100px;
+    right:100px;
+    left:400px;
+    text-align: left;
+   
+
+}
+
+.imagenorden img
+{
+    width:380px;
+    height:330px;
+    position:absolute;
+    
+
+    top:50px;
+    bottom:100px;
+    right:100px;
+    left:10px;
+
+}
+
+
+.cuadroIntegral
+{
+    width:850px;
+    height:400px;
+    background: #69b4c3;
+    position:relative;
+    top:125px;
+    bottom:100;
+    right:100;
+    left:50px; 
+}
+.proyecto3
+{
+    color: #000000;
+    position:absolute;
+    top:-30px;
+    bottom:100px;
+    right:100px;
+    left:10px;
+}
+
+.descripcion-integral
+{
+    width:400px;
+    height:330px;
+    color: #000000;
+    position:absolute;
+   
+    font-size: 22px;
+    top:30px;
+    bottom:100px;
+    right:100px;
+    left:400px;
+    text-align: left;
+   
+
+}
+
+.imagenintegral img
+{
+    width:380px;
+    height:330px;
+    position:absolute;
+    
+
+    top:50px;
+    bottom:100px;
+    right:100px;
+    left:10px;
+
+}
+
+.Cuadro-plantas
+{
+    width:850px;
+    height:420px;
+    background: #69b4c3;
+    position:relative;
+    top:175px;
+    bottom:100;
+    right:100;
+    left:50px; 
+}
+
+.proyecto4
+{
+    color: #000000;
+    position:absolute;
+    top:-30px;
+    bottom:100px;
+    right:100px;
+    left:10px;
+}
+
+.descripcion-planta
+{
+    width:400px;
+    height:330px;
+    color: #000000;
+    position:absolute;
+   
+    font-size: 22px;
+    top:30px;
+    bottom:100px;
+    right:100px;
+    left:400px;
+    text-align: left;
+   
+
+}
+
+.imagenplanta img
+{
+    width:380px;
+    height:330px;
+    position:absolute;
+    
+
+    top:50px;
+    bottom:100px;
+    right:100px;
+    left:10px;
+
+}
+
 /*h2
 {
     font-size: 34px;
